--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -194,29 +194,6 @@
             justify-content: center;
             align-items: center;
         }
-        .css_Energielabels_2 {
-            text-shadow: -2px -2px 0 #dcdcdc,
-                -2px -1px 0 #dcdcdc,
-                -2px 0px 0 #dcdcdc,
-                -2px 1px 0 #dcdcdc,
-                -2px 2px 0 #dcdcdc,
-                -1px -2px 0 #dcdcdc,
-                -1px -1px 0 #dcdcdc,
-                -1px 0px 0 #dcdcdc,
-                -1px 1px 0 #dcdcdc,
-                -1px 2px 0 #dcdcdc,
-                0px -2px 0 #dcdcdc,
-                0px -1px 0 #dcdcdc,
-                0px 1px 0 #dcdcdc,
-                0px 2px 0 #dcdcdc,
-                1px -2px 0 #dcdcdc,
-                1px -1px 0 #dcdcdc,
-                1px 0px 0 #dcdcdc,
-                1px 1px 0 #dcdcdc,
-                1px 2px 0 #dcdcdc,
-                2px -2px 0 #dcdcdc,
-                2px -1px 0 #dcdcdc,
-                2px 0px 0 #dcdcdc,
-                2px 1px 0 #dcdcdc,
-                2px 2px 0 #dcdcdc;
+        .leaflet-control-layers-expanded .leaflet-control-layers-toggle {
+            display: none;
         }
